<resources>
    <string name="app_name">Sylu-EOA</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="setting_beautiful">定制</string>
    <string name="setting_debug">高级</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login">登录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SYLU-EOA</string>
    <string name="nav_header_subtitle">Powered by kagg886</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">课程表</string>
    <string name="menu_gallery">考试信息</string>
    <string name="menu_slideshow">关于</string>
    <string name="login_error">Powered By kagg886</string>
    <string name="exam_year">学年</string>
    <string name="exam_term">学期</string>
    <string name="demo">Loading…</string>
    <string name="error">卧槽，出错了!</string>
    <string name="error_help">请帮助我们解决问题</string>
    <string name="menu_setting">设置</string>
    <string name="biginnovation">大创学分</string>
    <string name="join_qq_group">加入QQ群</string>
    <string name="get_log">打包日志</string>
    <string name="class2">第二课堂</string>
    <string name="class2_tips">
        请输入团委网的密码。\n若您从未登陆过，请单击下面的\'前往团委网\'以在网页端登录\n修改密码后回到本页面登录(需要连校园网)\n若不填写密码字段则尝试以教务网密码登录
    </string>
    <string name="pass">密码</string>
    <string name="goTW">前往团委网</string>
    <string name="exit">退出</string>
    <string name="tools">工具</string>
    <string name="choose">选择</string>
    <string name="yes">确定</string>
    <string name="no_choose">未选择</string>
</resources>