<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group1">

        <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/ic_schedule"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_exam_info"
                android:icon="@drawable/ic_exam_result"
                android:title="@string/menu_gallery"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/menu_setting"/>

        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_feed"
                android:title="@string/menu_slideshow"/>
    </group>
</menu>