<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:ignore="MissingDefaultResource">

    <TextView
            android:text="@string/class2_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_classsecset_tips"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_classsecedit_til"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_classsecset_tips">

        <EditText
                android:id="@+id/dialog_classsecedit_pass"
                android:hint="@string/pass"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialog_classsecedit_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_classsecedit_exit"
            app:layout_constraintTop_toBottomOf="@+id/dialog_classsecedit_til"/>
    <Button
            android:text="@string/goTW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialog_classsecedit_goTW"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_classsecedit_exit"
            app:layout_constraintTop_toBottomOf="@+id/dialog_classsecedit_til"/>
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialog_classsecedit_exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_classsecedit_til"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>