<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:gravity="top|center"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp">

        <TextView
                android:text="@string/no_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_photodesigner_state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:layout_marginStart="50dp"
                android:text="@string/choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_photodesigner_choose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>


    <Button
            android:layout_marginTop="40dp"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_photodesigner_do"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
</LinearLayout>